# generative_models

./: README.md  pyproject.toml
src/: autoencoder.py  variable_autoencoder.py
