[project]
name = "generation-model"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fukuba-shuma", email = "calculus.fukuba@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "matplotlib>=3.8.3",
    "scipy>=1.12.0",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
